:bug: Fix overflow style property of page-content for compability with sticky property

--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -9,7 +9,6 @@
 #page-content
   background-color $contentBackgroundColor
   padding 0 4rem 0 4rem
-  overflow-x hidden
   h2:first-child
     margin-top 2rem
   .text:last-child
